name:                   obdd
-- synopsis:               
-- description:            
version:                0.0.0
author:                 Slava Shklyaev <shk.slava@gmail.com>
maintainer:             Slava Shklyaev <shk.slava@gmail.com>
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10

source-repository head
  type:                 git
--  location:             

library
  exposed-modules:      Data.OBDD
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4 && < 5
                      , containers

test-suite Tests
  main-is:              test.hs
  hs-source-dirs:       tests, src
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , containers
                      , tasty >= 0.10
                      , tasty-hunit >= 0.9
