name:                   robdd
synopsis:               Reduced Ordered Binary Decision Diagrams
-- description:            
version:                0.1.0
author:                 Slava Shklyaev <shk.slava@gmail.com>
maintainer:             Slava Shklyaev <shk.slava@gmail.com>
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10

source-repository head
  type:                 git
  location:             git@github.com:slava-sh/robdd.git

flag graphviz
  description:          Include Data.ROBDD.GraphViz
  default:              True

library
  exposed-modules:      Data.ROBDD
                      , Data.ROBDD.Expr
  if flag(graphviz)
    exposed-modules:    Data.ROBDD.GraphViz
  other-modules:        Data.ROBDD.Internal
                      , Data.ROBDD.Internal.Expr
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4 && < 5
                      , containers
                      , mtl
  if flag(graphviz)
    build-depends:      dotgen >= 0.4

test-suite Tests
  main-is:              test.hs
  hs-source-dirs:       tests, src
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , containers
                      , mtl
                      , tasty >= 0.10
                      , tasty-hunit >= 0.9
